--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-flask==2.0.3
-gunicorn==20.1.0
-python-dotenv==0.19.2
+flask==3.0.3
+gunicorn==23.0.0
+python-dotenv==1.0.1
 flask-sqlalchemy==2.5.1
 flask-wtf==1.0.0
 flask-login==0.5.0
@@ -8,7 +8,10 @@ flask-migrate==3.1.0
 psycopg2-binary==2.9.3
 werkzeug==2.0.3
 pytest==7.1.2
-google-generativeai==0.3.0
-markdown2==2.4.8
+google-generativeai==0.8.4
+markdown2==2.4.13
 python-telegram-bot==20.3
-requests==2.31.0
+requests==2.32.3
+waitress==3.0.2
+gevent==24.11.1
+markupsafe==2.1.5
