--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ google-api-core==2.24.1
 google-api-python-client==2.160.0
 google-auth==2.38.0
 google-auth-httplib2==0.2.0
-google-generativeai==0.8.4
+google-generativeai>=0.3.0
 googleapis-common-protos==1.66.0
 greenlet==3.1.1
 grpcio==1.70.0
