--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,31 @@
-annotated-types==0.7.0
-blinker==1.9.0
-cachetools==5.5.1
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-colorama==0.4.6
+click==8.1.7
 Flask==3.0.3
 gevent==24.11.1
-google-ai-generativelanguage==0.6.15
-google-api-core==2.24.1
+google-api-core==2.19.0
 google-api-python-client==2.160.0
 google-auth==2.38.0
 google-auth-httplib2==0.2.0
-google-generativeai>=0.3.0
+google-generativeai>=0.3.2
 googleapis-common-protos==1.66.0
 greenlet==3.1.1
 grpcio==1.70.0
-grpcio-status==1.70.0
 gunicorn==23.0.0
-httplib2==0.22.0
-idna==3.10
+idna==3.7
 itsdangerous==2.2.0
-Jinja2==3.1.5
-MarkupSafe==3.0.2
+Jinja2==3.1.4
 markdown2==2.4.13
-packaging==24.2
-proto-plus==1.26.0
-protobuf==5.29.3
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycparser==2.22
-pydantic==2.10.6
-pydantic_core==2.27.2
-pyparsing==3.2.1
-python-dotenv==1.0.1
+MarkupSafe==2.1.5
+oauthlib==3.2.2
+protobuf==5.27.2
+pyasn1==0.6.0
+pyasn1-modules==0.4.0
+pytz==2024.1
 requests==2.32.3
+requests-oauthlib==1.3.1
 rsa==4.9
-setuptools==75.8.0
-tqdm==4.67.1
-typing_extensions==4.12.2
+six==1.16.0
 uritemplate==4.1.1
-urllib3==2.3.0
-waitress==3.0.2
+urllib3==2.2.1
 Werkzeug==3.0.1
 zope.event==5.0
 zope.interface==7.2
