--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,8 @@ Jinja2==3.1.4
 markdown2==2.4.13
 MarkupSafe==2.1.5
 oauthlib==3.2.2
-protobuf==5.27.2
+python-dotenv==1.0.1
+protobuf>=4.21.12,<5.0.0
 pyasn1==0.6.0
 pyasn1-modules==0.4.0
 pytz==2024.1
